<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">EcoLens</string>
    <string name="start_your_journey_with_ecolens" tools:ignore="DuplicateDefinition">Start your journey with EcoLens</string>
    <string name="backgroundImage" tools:ignore="DuplicateDefinition">Background Image for Get Started screen</string>
    <string name="ecolens_empowers_you_to_report_pollution_and_make_the_invisible_visible_join_us_in_our_mission_to_protect_our_planet">EcoLens empowers you to report pollution and make the invisible visible. Join us in our mission to protect our planet.</string>
    <string name="get_started">Get Started</string>
    <string name="rightarrow">Right Arrow Icon</string>
    <string name="close">Cross Icon</string>
    <string name="welcome_back">Welcome back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="log_in">Log in</string>
    <string name="new_user_sign_up">New user? Sign Up</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="google_logo">Google Logo</string>
    <string name="or">OR</string>
    <string name="back">Back button</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="chat">Chat</string>
    <string name="read_more">Read More</string>
    <string name="pollution_image">Pollution image</string>
    <string name="community_image">Community Image</string>
    <string name="daily_tips_image">Daily Tips Image</string>
    <string name="together_we_can_fight_climate_change_and_protect_our_planet">Together, we can fight climate change and protect our planet.</string>
    <string name="report_pollution">Report Pollution</string>
    <string name="help_us_track_and_report_pollution_in_your_area">Help us track and report pollution in your area.</string>
    <string name="community_connect">Community Connect</string>
    <string name="connect_with_like_minded_individuals_and_share_your_initiatives">Connect with like-minded individuals and share your initiatives.</string>
    <string name="daily_tips">Daily Tips</string>
    <string name="get_daily_tips_and_articles_on_how_to_reduce_your_carbon_footprint">Get daily tips and articles on how to reduce your carbon footprint.</string>
    <string name="banner_image">Banner Image</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="join_the_movement_n_report_act_transform">Join the Movement:\n Report, Act, Transform!</string>
    <string name="ecolens">EcoLens</string>
    <string name="choose_a_category">Choose a category</string>
    <string name="how_severe_is_the_pollution">How severe is the pollution?</string>
    <string name="upload_a_photo">Upload a photo</string>
    <string name="add_its_location">Add its location</string>
    <string name="add_a_description">Add a description</string>
    <string name="add_photo">Add Photo</string>
    <string name="air">Air</string>
    <string name="mild">Mild</string>
    <string name="moderate">Moderate</string>
    <string name="not_sure">Not Sure</string>
    <string name="other">Other</string>
    <string name="select_location">Select Location</string>
    <string name="severe">Severe</string>
    <string name="soil">Soil</string>
    <string name="submit_report">Submit Report</string>
    <string name="water">Water</string>
    <string name="describe_the_pollution_incident_in_detail">Describe the pollution incident in detail</string>
    <string name="tip_of_the_day">Tip of the day</string>
    <string name="learn_more">Learn more</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="profile_image">Profile Image</string>
    <string name="john_doe">John Doe</string>
    <string name="john_doe_gmail_com">john_doe@gmail.com</string>
    <string name="default_web_client_id">143678587815-coqpgjtpohrdplp521l9h5skd6ah4bjn.apps.googleusercontent.com</string>
    <string name="delete_account">Delete Account</string>
    <string name="your_reports">Your Reports</string>
    <string name="waste_image">Waste Image</string>
    <string name="waste_classification">Waste Classification</string>
    <string name="upload_or_describe_any_waste_item_to_get_guidance_on_recycling_reusing_or_disposal">Upload or describe any waste item to get guidance on recycling, reusing, or disposal.</string>
    <string name="classify">Classify</string>
    <string name="show_hide_password">Toggle password visibility</string>
    <string name="cancel_reply">Cancel reply</string>
    <string name="type_a_message">Type a message</string>
    <string name="send">Send</string>
    <string name="checking_your_email_nplease_click_the_link_we_just_sent">Checking your email…\nPlease click the link we just sent.</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="current_location_button">Current Location Button</string>
    <string name="add_a_title">Add a title</string>
    <string name="give_the_title_of_the_pollution_incident">Give the title of the pollution incident</string>
    <string name="uploaded_image_will_appear_here">Uploaded image will appear here</string>
    <string name="image_preview">Image Preview</string>
    <string name="no_location_selected">No location selected</string>
    <string name="name">Name</string>
    <string name="view_reports">View Reports</string>
    <string name="share">Share</string>
    <string name="report_details">Report Details</string>
    <string name="report_id">Report ID:</string>
    <string name="title">Title:</string>
    <string name="description">Description:</string>
    <string name="category">Category:</string>
    <string name="severity">Severity:</string>
    <string name="status">Status:</string>
    <string name="location">Location:</string>
    <string name="image">Image:</string>
    <string name="uploaded_image">Uploaded Image</string>
    <string name="updated_description">Updated Description:</string>
    <string name="updated_images">Updated Images:</string>
    <string name="resolution_details">Resolution Details:</string>
    <string name="resolved_at">Resolved At:</string>
    <string name="resolved_image">Resolved Image:</string>
    <string name="resolved_image_will_appear_here">Resolved image will appear here</string>
    <string name="model_category">Model Category</string>
    <string name="back_button">Back Button</string>
    <string name="email_verified">✅ Email verified!</string>
    <string name="verify_email">Verify Email</string>
    <string name="username">Username</string>
    <string name="replying_to">Replying to</string>
    <string name="original_message_preview">Original message preview...</string>
    <string name="message_text">Message text</string>
    <string name="date_time">Date/Time</string>
</resources>